<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".SetUpActivity">

    <EditText

        android:id="@+id/edtUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/customstroke"
        android:drawableLeft="@drawable/username"

        android:ems="10"

        android:hint="@string/user_name"
        android:inputType="textMultiLine"
        android:padding="14dp" />

    <EditText
        android:id="@+id/edtFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtUserName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/customstroke"
        android:drawableLeft="@drawable/username"
        android:ems="10"
        android:hint="Full Name"
        android:inputType="text"
        android:padding="14dp" />

    <EditText
        android:id="@+id/edtCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtFullName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/customstroke"
        android:drawableLeft="@drawable/flag"
        android:ems="10"
        android:hint="@string/country"
        android:inputType="textMultiLine"
        android:padding="14dp" />

    <Button

        android:id="@+id/btnSave"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_below="@+id/edtCountry"
        android:text="@string/save"
        android:background="@drawable/custombutton"/>
</RelativeLayout>